<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:textSize="17sp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/pbStreet"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <android.widget.AutoCompleteTextView
                android:id="@+id/etStreet"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:completionThreshold="3"
                android:hint="@string/elk_street"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/pbBuilding"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <android.widget.AutoCompleteTextView
                android:id="@+id/etBuilding"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginRight="4dp"
                android:hint="@string/elk_building"
                android:enabled="false"
                android:completionThreshold="1"
                android:inputType="textAutoComplete"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/etFlat"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>
        <LinearLayout
            android:id="@+id/actionContainer"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:gravity="center"
                android:text="Удалить"
                android:padding="10dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/warningContainer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/warningEditingBlocked"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <TextView
                android:id="@+id/tvErrorEditingBlocked"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_toRightOf="@id/warningEditingBlocked"
                android:paddingLeft="5dp"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/tvWarningEditingBlocked"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_toRightOf="@id/warningEditingBlocked"
                android:layout_below="@id/tvErrorEditingBlocked"
                android:text="@string/warning_editing_blocked"
                android:paddingLeft="5dp"/>
        </RelativeLayout>
        <EditText
            android:id="@+id/etFlat"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginLeft="4dp"
            android:ems="10"
            android:maxLength="5"
            android:imeOptions="actionNext"
            android:hint="@string/elk_flat"
            android:nextFocusDown="@+id/etEpd"
            android:inputType="phone">

            <requestFocus />
        </EditText>
        <TextView
            android:id="@+id/tvHotWater"
            style="@style/ProfileTheme.WarningText"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/elk_hotwater_off_disabled"
            android:paddingTop="8dp"
            android:visibility="gone" />

        <TextView
            style="@style/ProfileTheme.SeparatorGrey"
            android:paddingTop="18dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/elk_utilities" />

        <include layout="@layout/elk_separator_grey" />


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etEpd"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginRight="4dp"
                android:maxLength="10"
                android:hint="@string/elk_epd2"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:nextFocusDown="@+id/etElectroAccount" />

            <ImageButton
                android:id="@+id/btnHelpEpd"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:src="@drawable/elk_question"
                android:background="@drawable/elk_list_selector" />
        </LinearLayout>

        <TextView
            style="@style/ProfileTheme.SeparatorGrey"
            android:paddingTop="18dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/elk_electro" />

        <include layout="@layout/elk_separator_grey" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etElectroAccount"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginRight="4dp"
                android:inputType="phone"
                android:maxLength="10"
                android:hint="@string/elk_electro_account2"
                android:nextFocusDown="@+id/btnHelpElectroAccount" />

            <ImageButton
                android:id="@+id/btnHelpElectroAccount"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:src="@drawable/elk_question"
                android:background="@drawable/elk_list_selector"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etElectroDevice"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginRight="4dp"
                android:inputType="number"
                android:maxLength="20"
                android:hint="@string/elk_electro_device2" />

            <ImageButton
                android:id="@+id/btnHelpElectroDevice"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:src="@drawable/elk_question"
                android:background="@drawable/elk_list_selector"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            style="@style/ProfileTheme.HintText"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/elk_help_add_flat"
            android:paddingTop="8dp"
            android:paddingBottom="4dp" />
    </LinearLayout>
</ScrollView>